# Giscald

./: .env.local.sample  .gitignore  README.md  docker-compose.yml
api/: .gitignore  Makefile  pyproject.toml  ruff.toml
api/app/: auth.py  settings.py  urls.py
api/app/graphql/: context.py  schema.py
api/containers/development/: Dockerfile
api/data/bfcl/: judge.txt  system_initial.jinja
api/data/elyza_tasks_100/: prompt_eval.txt
api/data/japanese_mt_bench/: judge_ja_multi_prompt.txt
api/data/rakuda-questions/: prompt_eval.txt
api/data/tengu_bench/: prompt_eval.txt  test-00000-of-00001.parquet
api/libs/: admin.py
api/libs/migrations/: 0001_initial.py  0002_user.py  0003_generationtask_answer.py  0004_evaluationtask_rate_and_more.py  0005_generationsetting.py  0006_bench_remove_answer_category_generationtask_bench_and_more.py  0007_evaluationtask_processing_times.py  0008_question_correct_answers.py  0009_bench_template_question_eval_aspects.py  0010_bench_code.py  0011_tag_generationtasktag_generationtask_tags.py  0012_question_function.py  0013_bench_system_template.py  0014_alter_generationtask_status.py  0015_answer_turn_number_alter_bench_code_and_more.py  0016_alter_rate_answer_rateanswer_rate_answers.py  0017_evaluationtask_plot_name.py  0018_evaluationtask_active.py  0018_question_subtask_question_task.py  0019_bench_locked.py  0020_alter_question_correct_answers_and_more.py  0021_evaluationtask_evaluation__active_8c306a_idx.py  0022_generationtask_active_and_more.py
api/libs/models/: __init__.py  answer.py  bench.py  (+10 more)
api/templates/: base.html
(+95 files in other folders)
